deployments/apps/forge_admin_frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forge-admin-frontend-stage
